# microweb

./: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  input.css  package-lock.json  tailwind.config.js
.cargo/: config.toml
.github/workflows/: deploy.yml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql  0002_add_slug_to_post.sql  0002_comments.sql  0003_blob_instead_of_path.sql  0003_logs.sql  0004_add_desc_to_post.sql  0004_post_tags.sql  0005_add_released_to_post.sql  0006_comments.sql  0007_logs.sql  0008_post_tags.sql
backend/public/: index.html
backend/src/: api_error.rs  api_response.rs  auth_handler.rs  comments_handler.rs  get_handlers.rs  lib.rs  logs_handler.rs  main.rs  media_handler.rs  post_handler.rs  post_handlers.rs  rss_handler.rs  types.rs  upload_handler.rs  user_handler.rs
crates/auth/: Cargo.toml
crates/auth/src/: app.rs  lib.rs  login.rs  register.rs
crates/blog/: Cargo.toml
crates/blog/src/: app.rs
crates/blog/src/components/: comment.rs  header.rs  links.rs  mod.rs  side_menu.rs
crates/blog/src/pages/: admin.rs  blog_post.rs  edit_blog_post.rs  home.rs  rss.rs
crates/common/: Cargo.toml
crates/common/src/: api.rs  apps.rs  auth.rs  db.rs  lib.rs  models.rs  trace.rs
crates/files/: Cargo.toml
crates/files/src/: directory.rs  file.rs  lib.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs  manage.html  page.rs
crates/www/: Cargo.toml
crates/www/src/: app.rs  lib.rs
crates/www/src/components/: experience.rs  header.rs  skills.rs
crates/www/src/components/ui/: close.rs  layout.rs  mod.rs
crates/www/src/pages/: download_cv.rs  home.rs  mod.rs  not_found.rs  privacy_policy.rs
crates/www/src/sections/: about.rs  contact.rs  hero.rs  info.rs  mod.rs
cv/: cv.typ  metadata.toml
cv/modules_de/: education.typ  professional.typ  projects.typ  skills.typ
cv/modules_en/: education.typ  professional.typ  projects.typ  skills.typ
frontend/: Cargo.toml  README.md  Trunk.toml  index.html  input.css  package-lock.json  package.json  tailwind.config.js
frontend/public/: styles.css
frontend/public/assets/: paperb.png~
frontend/public/resources/: projects.json  public-key.asc  robots.txt
frontend/src/: app.rs  lib.rs  main.rs  types.rs  util.rs
frontend/src/components/: background.rs  blog_card.rs  comment.rs  cursor.rs  drop_down.rs  experience.rs  github_repository.rs  header.rs  itch_embed.rs  mod.rs  profile.rs  side_menu.rs  skills.rs  use_case.rs
frontend/src/components/ui/: card.rs  close.rs  layout.rs
frontend/src/pages/: admin.rs  blog_post.rs  download_cv.rs  edit_blog_post.rs  home.rs  loading.rs  login.rs  logout.rs  mod.rs  not_found.rs  p404.rs  profile.rs  register.rs  rss.rs  use_cases.rs
frontend/src/sections/: about.rs  contact.rs  features.rs  hero.rs  info.rs  mod.rs
microblog/: .env  Cargo.toml  README.md  input.css  package-lock.json  package.json
microblog/migrations/: 0006_fix_typo.sql
microblog/src/: app.rs  database.rs  lib.rs  main.rs  models.rs  peel-light.tmTheme  server.rs
microblog/src/components/: blog_card.rs  comment.rs  header.rs  links.rs  mod.rs  side_menu.rs
microblog/src/pages/: admin.rs  blog_post.rs  edit_blog_post.rs  home.rs  loading.rs  login.rs  logout.rs  p404.rs  register.rs  rss.rs
microblog/style/: main.css
migrations/: 0001_init.sql  0005_post_release.sql  0007_files.sql  0008_sandbox.sql  0009_fix_unique.sql
public/resources/: public-key.asc  robots.txt
src/: app.rs  apps.rs  auth.rs  database.rs  lib.rs  main.rs  models.rs
src/apps/: components.rs
src/auth/: app.rs  login.rs  register.rs
src/blog/: app.rs  auth.rs  database.rs  mod.rs
src/blog/components/: blog_card.rs  comment.rs  drop_down.rs  header.rs  links.rs
src/blog/pages/: admin.rs  blog_post.rs  edit_blog_post.rs  home.rs  login.rs  logout.rs  mod.rs  p404.rs  register.rs  rss.rs
src/components/: drop_down.rs  header.rs  mod.rs
src/files/: directory.rs  file.rs  file_browser.html  mod.rs
src/pages/: admin.rs  blog_post.rs  mod.rs  register.rs  rss.rs
src/sandbox/: manage.html  mod.rs  page.rs
src/www/: app.rs  mod.rs
src/www/components/: background.rs  experience.rs  header.rs  itch_embed.rs  mod.rs  profile.rs  qrcode.rs  skills.rs
src/www/components/ui/: button.rs  card.rs  card_link.rs  layout.rs  mod.rs
src/www/pages/: business_card.rs  download_cv.rs  home.rs  mod.rs  not_found.rs  privacy_policy.rs
src/www/sections/: about.rs  contact.rs  hero.rs  info.rs
style/: main.css
