[package]
name = "microblog"
version = "0.1.0"
edition = "2021"

[dependencies]
ammonia = "4.0.0"
anyhow = "1.0.89"
axum = { version = "0.7.4", features = ["multipart"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
bcrypt = "0.15.1"
chrono = "0.4.38"
fast_image_resize = { version = "3.0.0" }
image = "0.25.2"
jsonwebtoken = "9.3.0"
serde = "1.0.210"
serde_json = "1.0.128"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = ["chrono"] }
tokio = "1.28.2"
tower-http = { version = "0.6.1", features = ["cors", "fs"] }
uuid = "1.10.0"
