[package]
name = "microblog"
version = "0.1.0"
edition = "2021"

[dependencies]
ammonia = "4.0.0"
anyhow = "1.0.89"
axum = { version = "0.7.4", features = ["multipart"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
fast_image_resize = { version = "3.0.0" }
image = "0.25.2"
jsonwebtoken = "9.3.0"
serde = "1.0.210"
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["chrono", "runtime-tokio", "postgres", "tls-native-tls"] }
tokio = { version = "1.28.2", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.1", features = ["cors", "fs"] }
uuid = { version = "1.10.0", features = ["v4"] }
