[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.6", features = ["csr", "nightly"] }
leptos-use = "0.12.0"
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
gloo-timers = "0.3.0"
gloo-net = "0.6.0"
rand = "0.8.5"
chrono-tz = "0.9.0"
chrono = "0.4.34"
serde = "1.0.209"
serde_json = "1.0.127"
ammonia = "4.0.0"

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
