[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
authors = ["Microwonk <nicolas.theo.frey@gmail.com>"]

[dependencies]
leptos = { version = "0.6.15", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6.15", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.15", features = ["csr", "nightly"] }
leptos-use = { version = "0.13.5", features = ["use_color_mode"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
gloo-net = "0.6.0"
serde = "1.0.209"
serde_json = "1.0.127"
ammonia = "4.0.0"
pulldown-cmark = "0.12.1"
chrono = { version = "0.4.38", features = ["serde"] }
web-sys = { version = "0.3", features = ["Document", "Window"] }
regex = "1.11.0"
codee = { version = "0.2.0", features = ["json_serde"] }
icondata = { version = "0.4.0" }
lazy_static = "1.5.0"
tokio = { version = "1.40.0", features = ["sync"] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
