[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
authors = ["Microwonk <nicolas.theo.frey@gmail.com>"]

[dependencies]
leptos = { version = "0.7.8", features = ["csr", "nightly"] }
leptos_meta = { version = "0.7.8" }
leptos_router = { version = "0.7.8" }
leptos-use = { version = "0.15.7", features = ["use_color_mode"] }
console_log = "1"
log = "0.4.26"
console_error_panic_hook = "0.1"
gloo-net = "0.6.0"
serde = "1.0.219"
serde_json = "1.0.140"
ammonia = "4.0.0"
pulldown-cmark = "0.13.0"
chrono = { version = "0.4.40", features = ["serde"] }
web-sys = { version = "0.3", features = ["Document", "Window"] }
regex = "1.11.1"
codee = { version = "0.3.0", features = ["json_serde"] }
icondata = { version = "0.5.0" }
lazy_static = "1.5.0"
tokio = { version = "1.44.1", features = ["sync"] }
syntect = { version = "5.2", default-features = false, features = ["default-fancy"]}
gloo-timers = "0.3.0"
flate2 = "1.1.0"
iter_tools = "0.24.0"
rss = "2.0.12"
rand = "0.9.0"
# needed for rand on wasm
getrandom = { version = "0.3.2", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3.50"


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
