[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos.workspace = true
axum = { workspace = true, optional = true }
leptos_axum = { workspace = true, optional = true }
leptos_router.workspace = true
leptos_meta.workspace = true
regex.workspace = true
icondata.workspace = true
chrono.workspace = true
tracing = { workspace = true }

# own
common = { workspace = true }

[features]
default = ["back", "front"]
back = [
    "dep:axum",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_router/ssr"
]

front = [
    "leptos/hydrate",
]