[package]
name = "files"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing.workspace = true
axum.workspace = true
tower-http.workspace = true
chrono.workspace = true
serde.workspace = true
uuid.workspace = true
tokio.workspace = true

# own
common = { workspace = true, features = ["back"]}
